--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/mongoose": "^5.7.31",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.24"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
